<resources>

    <!--app name-->
    <string name="app_name">Rubby_DOD_DenKariery_0425</string>

    <!-- fragment_loading -->
    <string name="loading">Loading</string>

    <!-- fragment_main -->
    <string name="isMainFragment">This is the main fragment</string>
    <string name="reset">\"Reset\"</string>
    <string name="fragmentTwo">\"Fragment Two\"</string>
    <string name="fragmentOne">\"Fragment One\"</string>

    <!-- fragment_one -->
    <string name="isFragmentOne">This is the fragment One</string>
    <string name="saySomething">\"Say something\"</string>

    <!-- fragment_two -->
    <string name="isFragmentTwo">This is the fragment Two</string>
    <string name="variableSetTo" translatable="false">The QiVariable is set to : </string>
    <string name="placeholder" translatable="false">Placeholder</string>
    <string name="setToA" translatable="false">Set to \"Pepper\"</string>
    <string name="setToB" translatable="false">Set to \"Nao\"</string>
    <string name="pepper" translatable="false">Pepper</string>
    <string name="nao" translatable="false">Nao</string>
    <string name="isFragmentThree">This is Fragment 3</string>
    <string name="fragmentThree">Fragment Three</string>
    <string name="fragmentFour">Fragment Four</string>
    <string name="fragmentFive">Fragment Five</string>
    <string name="fragmentSix">Fragment Six</string>
    <string name="fragmentSeven">Fragment Seven</string>
    <string name="fragmentEight">Fragment Eight</string>
    <string name="fragmentNine">Fragment Nine</string>
    <string name="fragmentTen">Fragment X</string>
    <string name="isFragmentFour">This is Fr4</string>
    <string name="isFragmentFive">This is Fr5</string>
    <string name="isFragmentSix">This is Fr6</string>
    <string name="isFragmentSeven">This is Fr7</string>
    <string name="isFragmentEight">This is Fr8</string>
    <string name="isFragmentNine">This is Fr9</string>
    <string name="isFragmentTen">This is Fr10</string>


</resources>
