<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cb_canvas"
    android:padding="32dp">

    <!-- TITLE -->
    <TextView
        android:id="@+id/three_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/isFragmentThree"
        android:textColor="@color/cb_ink"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView android:layout_width="400dp" android:layout_height="150dp" android:src="@drawable/logo_kraj_nove" app:layout_constraintTop_toBottomOf="@+id/three_text" app:layout_constraintBottom_toTopOf="@+id/three_say" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <!-- SECONDARY BUTTON (RESET) -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/three_button_reset"
        android:layout_width="500dp"
        android:layout_height="120dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_btn_secondary"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="@color/cb_ink"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- PRIMARY BUTTON (SAY) -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/three_say"
        android:layout_width="500dp"
        android:layout_height="120dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_btn_primary"
        android:text="@string/saySomething"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/three_button_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
