<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/seven_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/isFragmentSeven"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/seven_say"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginBottom="112dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/saySomething"
        android:textAllCaps="false"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/one_button_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seven_text"
        app:layout_constraintVertical_bias="0.292" />

    <Button
        android:id="@+id/one_button_reset"
        android:layout_width="450dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="230dp"
        android:layout_height="229dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/one_button_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven_text"
        app:layout_constraintVertical_bias="0.435"
        app:srcCompat="@drawable/qr_registrace_msv" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="icuk.cz/msv"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView19"
        app:layout_constraintStart_toStartOf="@+id/imageView19"
        app:layout_constraintTop_toBottomOf="@+id/imageView19" />

</androidx.constraintlayout.widget.ConstraintLayout>